--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,6 @@
 @import url("nav.css");
 @import url("root.css");
-
+@import url("city.css");
+@import url("hourly.css");
+@import url("details.css");
+@import url("sevenDays.css");
