--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,36 +1,29 @@
 @import url('root.css');
 
-
 .page{
   display: flex;
   gap: 2rem;
-  width: 90%;
+  width: 85%;
   height: 90vh;
-  margin: 0 auto;
-  margin-top: 2.15rem;
-  
-  /* background-color: white; */
+  margin: 1.5rem auto;
 }
 
 nav{
   display: flex;
   flex-direction: column;
   height: 100%;
-  max-width: 110px;
+  flex-basis: 7%;
+  /* max-width: 110px; */
   /* margin-left: 7rem; */
   background-color: var(--interface-color);
   border-radius: 20px;
 }
 
-.super{
-  width: 100px;
-  height: 100px;
-  color: white
-}
+
 
 .search {
   background-color: var(--interface-color);
-  min-width: 750px;
+  width: 100%;
   min-height: 45px;
   margin: 0 auto;
   border-radius: 10px;
