--- a/src/css/city.css
+++ b/src/css/city.css
@@ -13,5 +13,47 @@
     justify-content: space-between;
     min-width: 750px;
     min-height: 150px;
-    border: 1px solid black;
+}
+
+.weather-icon{
+    flex-basis: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.weather-icon img {
+    height: 100%;
+    width: 157px;
+}
+
+.city-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 40%;
+}
+
+.city-name{
+    color: #d1d3d5;
+    font-size: 2rem;
+    font-weight: 700;
+    margin-bottom: .2rem;
+    width: auto;
+}
+
+.rain-chance{
+    color: var(--grey-font);
+    font-size: .85rem;
+    margin-bottom: .2rem;
+    width: auto;
+}
+
+.city-temperature{
+    display: flex;
+    align-items: center;
+    color: white;
+    font-weight: 700;
+    font-size: 3.5rem;
 }
