--- a/src/css/hourly.css
+++ b/src/css/hourly.css
@@ -2,8 +2,79 @@
 
 .hourly-forecast{
     display: flex;
+    flex-direction: column;
     background-color: var(--interface-color);
     width: 100%;
     min-height: 30%;
     border-radius: 18px;
+    align-items: center;
+}
+
+.hourly-text{
+    color: var(--grey-font);
+    font-weight: 600;
+    font-size: .8rem;
+    width: 90%;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.hourly-content{
+    width: 90%;
+    height: 90%;
+}
+
+.hourly-content ul {
+    display: flex;
+    width: 100%;
+    height: 90%;
+}
+
+.hourly-content li:not(:last-child){
+    border-right: 1px solid #303f56;
+}
+
+.h-item img{
+    height: 50px;
+    width: 70px;
+}
+
+#not-fit{
+    height: 50px;
+    width: 60px; 
+}
+
+.h-item{
+    display: flex;
+    flex-direction: column;
+    align-items : center;
+    justify-content: center;
+    gap: .4rem;
+    flex-basis: 16.66%;
+    transition: background-color .3s, transform .5s;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.h-time {
+    color: var(--grey-font);
+    font-weight: 600;
+    font-size: .85rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.h-temp{
+    color: var(--grey-temperature);
+    font-weight: 700;
+    font-size: 1.3rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.h-item:hover{
+    background-color: #344661;
+    transform: translateY(-5%);
 }
