--- a/src/css/root.css
+++ b/src/css/root.css
@@ -1,8 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Skranji:wght@400;700&display=swap');
 
 :root {
   --background: #0b131e;
   --interface-color: #202b3b;
+  --grey-font: #9399a2;
+  --grey-temperature: #dde0e4;
+}
+
+* {
+   padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Rubik";
+  list-style-type: none;
 }
 
 body{
@@ -11,4 +21,10 @@ body{
   margin: 0;
   box-sizing: border-box;
   /* overflow: hidden; */
+  font-family: "Rubik";
+  list-style-type: none;
+}
+
+ul {
+  list-style-type: none;
 }
