--- a/src/css/details.css
+++ b/src/css/details.css
@@ -6,4 +6,64 @@
     width: 100%;
     height: 33%;
     border-radius: 18px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.d-text-btn{
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.see-more{
+    height: 25px;
+    width: 85px;
+    color: white;
+    background-color: var(--btn-color);
+    border: none;
+    font-weight: 500;
+    border-radius: 13px;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+.see-more:hover{
+    background-color: var(--btn-hover);
+}
+
+.d-details {
+    width: 90%;
+    height: 75%;
+    display: flex;
+    flex-wrap: wrap;
+
+
+}
+
+[class^="d-h-item"] {
+    display: flex;
+    align-items: baseline;
+    flex-direction: column;
+    width: 33.33%;
+    height: 50%;
+}
+
+.icon-text{
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+}
+
+.grey-classic{
+    color: var(--grey-font);
+    font-size: 1.1rem;
+}
+
+.d-value{
+    color: var(--details-value);
+    padding: 0 2.4rem;
+    font-weight: 700;
+    font-size: 1.6rem;
 }
