--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -13,12 +13,55 @@ nav{
   flex-direction: column;
   height: 100%;
   flex-basis: 7%;
-  /* max-width: 110px; */
+  max-width: 100px; 
   /* margin-left: 7rem; */
   background-color: var(--interface-color);
   border-radius: 20px;
 }
 
+.logo{
+  width: 100%;
+  padding: 2.5rem 0 3rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo img{
+  width: 45px;
+  height: 45px;
+}
+
+[class^="n-item"]{
+  width: 100%;
+  height: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: .3rem;
+  margin-bottom: .8rem;
+  cursor: pointer;
+}
+
+.n-item--active p{
+  color: var(--nav-active-p);
+  font-weight: 600;
+}
+
+.n-item--active svg {
+  fill: var(--nav-active-svg);
+}
+
+nav svg{
+  fill: #9399a2;
+  width: 25px;
+  height: 25px;
+}
+
+.nav-text{
+  color: var(--grey-font);
+  font-size: .9rem;
+}
 
 
 .search {
