--- a/src/css/root.css
+++ b/src/css/root.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Skranji:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Skranji:wght@400;700&display=swap");
 
 :root {
   --background: #0b131e;
@@ -13,14 +13,14 @@
 }
 
 * {
-   padding: 0;
+  padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: "Rubik";
   list-style-type: none;
 }
 
-body{
+body {
   background-color: var(--background);
   padding: 0;
   margin: 0;
@@ -32,4 +32,20 @@ body{
 
 ul {
   list-style-type: none;
+}
+
+#spinner {
+  animation: spinner_0KQs 1.2s cubic-bezier(0.52, 0.6, 0.25, 0.99) infinite;
+  fill: #9399a2;
+}
+
+@keyframes spinner_0KQs {
+  0% {
+    r: 0;
+    opacity: 1;
+  }
+  100% {
+    r: 11px;
+    opacity: 0;
+  }
 }
