--- a/src/css/root.css
+++ b/src/css/root.css
@@ -34,6 +34,11 @@ ul {
   list-style-type: none;
 }
 
+.spinner svg{
+  width: 100px;
+  height: 100px;
+}
+
 #spinner {
   animation: spinner_0KQs 1.2s cubic-bezier(0.52, 0.6, 0.25, 0.99) infinite;
   fill: #9399a2;
@@ -47,5 +52,23 @@ ul {
   100% {
     r: 11px;
     opacity: 0;
+  }
+}
+
+.loading-animation {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top right, var(--interface-color), #161d28);
+  background-size: 200% 100%;
+  animation: loading 2s linear infinite;
+  border-radius: 15px;
+}
+
+@keyframes loading {
+  0% {
+      background-position: 200% 0;
+  }
+  100% {
+      background-position: -200% 0;
   }
 }
