Implemented loading animation for all elements

--- a/src/css/root.css
+++ b/src/css/root.css
@@ -35,8 +35,13 @@ ul {
 }
 
 .spinner svg{
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
+}
+
+.spinner{
+  align-self: center;
+  
 }
 
 #spinner {
