--- a/src/css/sevenDays.css
+++ b/src/css/sevenDays.css
@@ -48,6 +48,13 @@
   border-radius: 5px;
 }
 
+/* .s-d-item > * {
+  border: 1px solid black;
+} 
+
+.bold-container{ 
+  /* border: 1px solid white; */
+
 .bold-light-text {
   color: var(--nav-active-p);
   font-weight: 600;
@@ -89,12 +96,15 @@
   align-items: center;
   justify-content: center;
   width: 75px !important;
+  /* border: 1px solid white; */
+  flex-basis: 30%;
   /* border: 1px solid green */
 }
 
 .bold-container {
   /* border: 1px solid white; */
-  flex-basis: 45%;
+  justify-content: center;
+  flex-basis: 50%;
 }
 
 .s-d-item:not(:last-child) {
