Adjested the width for certain images in hourly container, started implementing Geolocation API

--- a/src/css/hourly.css
+++ b/src/css/hourly.css
@@ -44,6 +44,11 @@
     width: 55px; 
 }
 
+#another-fit {
+    height: 50px;
+    width: 60px; 
+}
+
 .h-item{
     display: flex;
     flex-direction: column;
