--- a/src/css/city.css
+++ b/src/css/city.css
@@ -10,9 +10,10 @@
 
 .city{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     min-width: 750px;
     min-height: 150px;
+    align-items: center;
 }
 
 .weather-icon{
@@ -56,4 +57,6 @@
     color: white;
     font-weight: 700;
     font-size: 3.5rem;
+    flex-basis: 20%;
+    justify-content: center;
 }
