--- a/src/css/root.css
+++ b/src/css/root.css
@@ -10,6 +10,8 @@
   --details-value: #c4cad3;
   --nav-active-p: #c4cad3;
   --nav-active-svg: #f0f1f1;
+  --border-color: #303f56;
+  --setting-active: #35455e;
 }
 
 * {
