--- a/src/css/cities.css
+++ b/src/css/cities.css
@@ -124,7 +124,7 @@
 
 .preview {
   width: 100%;
-  background-color: var(--interface-color);
+  background-color: var(--background);
   height: 100%;
   display: flex;
   flex-direction: column;
