--- a/src/css/city.css
+++ b/src/css/city.css
@@ -16,8 +16,12 @@
     align-items: center;
 }
 
+/* .city > * {
+    border: 1px solid white;
+} */
+
 .weather-icon{
-    flex-basis: 40%;
+    flex-basis: 30%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -33,7 +37,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-basis: 40%;
+    flex-basis: 35%;
 }
 
 .city-name{
@@ -57,6 +61,42 @@
     color: white;
     font-weight: 700;
     font-size: 3.5rem;
-    flex-basis: 20%;
+    flex-basis: 30%;
     justify-content: center;
+}
+
+.save-city{
+    flex-basis: 5%;
+    /* align-self: baseline; */
+    height: 90%;
+    display: flex;
+    align-items: baseline;
+}
+
+.save-city svg{
+    /* padding-top: 5%; */
+    width: 100%;
+    /* border: 1px solid white; */
+    height: 40%;
+    cursor: pointer;
+    fill: #344661; 
+    transition: fill .2s ease, scale .2s ease-in-out;
+}
+ 
+.save-city svg:hover{
+    fill: #486187;
+    scale: 1.1;
+}
+
+@keyframes loadingAnimation {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+}
+
+.animate {
+  animation: loadingAnimation 1.5s ease-in-out infinite;
 }
