--- a/src/css/detailSection.css
+++ b/src/css/detailSection.css
@@ -63,6 +63,12 @@
   display: flex;
   flex-direction: column;
   padding: .7rem 0 0 1.5rem;
+  cursor: pointer;
+  transition: background-color .3s ease;
+}
+
+.details-item:hover{
+  background-color: #344661;
 }
 
 .d-icon-text {
