--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,6 +1,6 @@
-@import url('root.css');
+@import url("root.css");
 
-.page{
+.page {
   display: flex;
   gap: 2rem;
   width: 85%;
@@ -8,18 +8,33 @@
   margin: 1.5rem auto;
 }
 
-nav{
+nav {
   display: flex;
   flex-direction: column;
   height: 100%;
   flex-basis: 7%;
-  max-width: 100px; 
+  max-width: 90px;
   /* margin-left: 7rem; */
   background-color: var(--interface-color);
   border-radius: 20px;
+  position: relative;
 }
 
-.logo{
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  display: none;
+}
+
+.overlay--active{
+  display: block;
+}
+
+.logo {
   width: 100%;
   padding: 2.5rem 0 3rem 0;
   display: flex;
@@ -27,44 +42,42 @@ nav{
   justify-content: center;
 }
 
-.logo img{
+.logo img {
   width: 45px;
   height: 45px;
 }
 
-[class^="n-item"]{
+[class^="n-item"] {
   width: 100%;
   height: 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: .3rem;
-  margin-bottom: .8rem;
+  gap: 0.3rem;
+  margin-bottom: 0.8rem;
   cursor: pointer;
 }
 
-.n-item--active p{
+.n-item--active p {
   color: var(--nav-active-p);
   font-weight: 600;
-    transition: .3s all;
-
+  transition: 0.3s all;
 }
 
 .n-item--active svg {
   fill: var(--nav-active-svg);
-  transition: .3s all;
-
+  transition: 0.3s all;
 }
 
-nav svg{
+nav svg {
   fill: #9399a2;
   width: 25px;
   height: 25px;
 }
 
-.nav-text{
+.nav-text {
   color: var(--grey-font);
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
 
 .search {
@@ -77,19 +90,18 @@ nav svg{
   align-items: center;
 }
 
-.search input{
+.search input {
   background-color: var(--interface-color);
   border: none;
   outline: none;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   width: 95%;
   color: white;
   font-family: "Roboto";
 }
 
-
 /* placeholder color change for chrome, firefox, opera */
-::placeholder{
+::placeholder {
   color: white;
   opacity: 1;
 }
@@ -100,7 +112,6 @@ nav svg{
 }
 
 /* for Edge */
-::-ms-input-placeholder { 
+::-ms-input-placeholder {
   color: white;
 }
-
