--- a/src/css/root.css
+++ b/src/css/root.css
@@ -19,7 +19,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Rubik";
-  list-style-type: none;
+  /* list-style-type: none; */
 }
 
 body {
