--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -74,7 +74,7 @@
   background-color: var(--setting-active);
   color: var(--nav-active-p);
   font-weight: 600;
-  transition: background-color .3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
   /* border-left: 1px solid var(--setting-active)  */
 }
 
@@ -130,25 +130,25 @@
   min-height: 40%;
   border-radius: 18px;
   padding: 1rem 1.5rem;
-  gap: .2rem;
+  gap: 0.2rem;
 }
 
 .general-option {
-    display: flex;
+  display: flex;
   flex-direction: column;
   justify-content: stretch;
   /* border: 1px solid green; */
 }
 
-.general-option:not(:last-child){
+.general-option:not(:last-child) {
   border-bottom: 1px solid var(--border-color);
 }
 
-.general-option:not(:first-child){
-  padding-top: .5rem;
+.general-option:not(:first-child) {
+  padding-top: 0.5rem;
 }
 
-.general-row{
+.general-row {
   display: flex;
   flex: 3;
   justify-content: space-between;
@@ -156,7 +156,7 @@
   /* border: 1px solid black; */
 }
 
-.row-small{
+.row-small {
   flex: 3;
   /* align-self: center; */
   align-items: flex-start;
@@ -168,9 +168,9 @@
   font-size: 0.9rem;
 }
 
-.general-desc{
+.general-desc {
   color: var(--grey-font);
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
 
 .t-f-hours {
@@ -216,4 +216,61 @@ input[type="checkbox"].toggle-switch::after {
 }
 input[type="checkbox"].toggle-switch:checked::after {
   left: 20px;
+}
+
+.sign-up-container {
+  margin-top: 0.7rem;
+  width: 100%;
+  min-height: 40%;
+  background-color: var(--interface-color);
+  border-radius: 18px;
+  display: flex;
+  flex-direction: column;
+  padding: 0rem 1.5rem;
+}
+
+
+.sign-up-header {
+  flex-basis: 25%;
+  color: #d1d3d5;
+  font-size: 1.3rem;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  border-bottom: 2px solid var(--border-color);
+}
+
+.sign-up-text-btn {
+  flex-basis: 70%;
+  display: flex;
+  flex-direction: column;
+}
+.s-u-text {
+  padding-top: 0.75rem;
+  color: var(--grey-font);
+  font-size: 0.9rem;
+}
+
+
+ul.s-u-list {
+  padding: 1.2rem 0 1.1rem 1rem;
+  list-style-type: disc;
+  color: var(--grey-font);
+  font-size: 0.9rem;
+}
+
+.sign-up {
+  color: white;
+  background-color: var(--btn-color);
+  border: none;
+  font-weight: 500;
+  height: 40px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: all .3s;
+}
+
+.sign-up:hover{ 
+  background-color: var(--btn-hover);
 }
