--- a/src/css/hourly.css
+++ b/src/css/hourly.css
@@ -57,8 +57,8 @@
     gap: .4rem;
     flex-basis: 16.66%;
     transition: background-color .3s, transform .5s;
-    border-radius: 5px;
-    cursor: pointer;
+    /* border-radius: 5px; */
+    /* cursor: pointer; */
 }
 
 .h-time {
@@ -78,8 +78,8 @@
     display: flex;
     justify-content: center;
 }
-
+/* 
 .h-item:hover{
     background-color: #344661;
     transform: translateY(-5%);
-}
+} */
