Making site responsive

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,4 +6,5 @@
 @import url("sevenDays.css");
 @import url("settings.css");
 @import url("cities.css");
-@import url("detailSection.css")
+@import url("detailSection.css");
+@import url("media.css");
