--- a/src/css/city.css
+++ b/src/css/city.css
@@ -3,7 +3,8 @@
 .content{
     display: flex;
     flex-direction: column;
-    height: 100%;
+    /* height: 100%; */
+    min-height: 100%;
     gap: 1rem;
     flex-basis: 60%;
 }
@@ -11,8 +12,8 @@
 .city{
     display: flex;
     justify-content: center;
-    min-width: 750px;
-    min-height: 150px;
+    width: 100%;
+    height: 23%;
     align-items: center;
 }
 
