--- a/src/css/city.css
+++ b/src/css/city.css
@@ -1,12 +1,19 @@
 @import url("root.css");
 
+
+.main__wrapper{
+    flex-basis: 93%;
+    display: flex;
+    gap: 3rem;
+}
+
 .content{
     display: flex;
     flex-direction: column;
     /* height: 100%; */
     min-height: 100%;
     gap: 1rem;
-    flex-basis: 60%;
+    flex-basis: 70%;
 }
 
 .city{
