--- a/src/css/media.css
+++ b/src/css/media.css
@@ -3,10 +3,10 @@
     .page{
         flex-direction: column;
         width: 95vw;
-        height: calc(100vh - 1.5rem);
+        height: calc(100vh - 2rem);
         margin: 1rem auto;
         position: relative;
-        margin-bottom: .5rem;
+        margin-bottom: 1rem;
     }
 
     nav{
@@ -59,10 +59,10 @@
 }
 
 @media screen and (max-width: 836px) {
-    
     .main__wrapper{
         flex-direction: column;
-        max-height: 80%;
+        max-height: 90%;
+        margin-bottom: 0;
     }
 
     .content{
@@ -76,6 +76,19 @@
     }
 
     .page{
+        min-height: auto;
         max-height: 200vh;
+        margin: 1rem auto;
+        position: relative;
+        margin-bottom: 3rem;
+    }
+
+    .seven-day{
+        min-height: 400px;
+    }
+
+    .s-d-icon-condition img {
+        width: 50%;
+        min-width: 60px
     }
 }
