--- a/src/css/detailSection.css
+++ b/src/css/detailSection.css
@@ -79,7 +79,7 @@
 
 .d-i-text{
     color: var(--grey-font);
-    font-size: 1rem;
+    font-size: .9rem;
     font-weight: 600;
 }
 
@@ -87,7 +87,7 @@
     color: var(--details-value);
     padding: 0 2.7rem;
     font-weight: 700;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
 }
 
 .d-i-unit{
