--- a/src/css/city.css
+++ b/src/css/city.css
@@ -51,21 +51,14 @@
     justify-content: center;
     align-items: center;
     flex-basis: 57%;
-    container-name: city
 }
 
 .city-name{
     color: #d1d3d5;
-    font-size: 2rem;
+    font-size: 3vw;
     font-weight: 700;
     margin-bottom: .2rem;
     width: auto;
-}
-
-@container city (max-width: 200px){
-    .city-name {
-        font-size: medium !important;
-    }
 }
 
 .rain-chance{
