reajust on left city box

--- a/src/css/city.css
+++ b/src/css/city.css
@@ -48,8 +48,8 @@
 .city-text{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
     flex-basis: 57%;
 }
 
